Working on scholarship

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
     <title>GPC Bathinda</title>
+    
+
+<link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
+<link rel="manifest" href="assets/images/favicon/site.webmanifest">
+<link rel="mask-icon" href="assets/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -66,6 +76,10 @@ https://templatemo.com/tm-569-edu-meeting
                 <i class="fa fa-download">&nbsp;</i>
                 <a href="downloads.html">Downloads</a>
               </span>
+              <span style="padding-left:2%;">
+                <i class="fa fa-graduation-cap">&nbsp;</i>
+                <a href="#scholarships_offered">Scholarships</a>
+              </span>
               </p>
           </div>
         </div>
@@ -95,52 +109,52 @@ https://templatemo.com/tm-569-edu-meeting
                   <li class="has-sub">
                     <a href="javascript:void(0)">About Us</a>
                     <ul class="sub-menu">
-                      <li><a href="organization.html">Organization</a></li>
-                      <li><a href="principal_message.html">Principal&apos;s Message</a></li>
-                      <li><a href="vision_mission.html">Vision & Mission</a></li>
-                      <li><a href="history.html">History</a></li>
-                      <li><a href="campus.html">Campus</a></li>
+                      <li><a href="aboutus/organization.html">Organization</a></li>
+                      <li><a href="aboutus/principal_message.html">Principal&apos;s Message</a></li>
+                      <li><a href="aboutus/vision_mission.html">Vision & Mission</a></li>
+                      <li><a href="aboutus/history.html">History</a></li>
+                      <li><a href="aboutus/campus.html">Campus</a></li>
                     </ul>
                   </li>
                   <li class="has-sub">
                     <a href="javascript:void(0)">Academics & Admission</a>
                     <ul style="width:280px" class="sub-menu">
-                      <li><a href="programmes.html">Programmes of Study</a></li>
-                      <li><a href="admission_eligibility.html">Admission Eligibility</a></li>
-                      <li><a href="anti_ragging.html">Anti Ragging</a></li>
-                      <li><a href="fee_structure.html">Fee Structure</a></li>
-                      <li><a href="academic_calendar.html">Academic Calendar</a></li>
-                      <li><a href="general_rules.html">General Rules and Guidelines</a></li>
-                      <li><a href="psbte_results.html">PSBTE Results</a></li>
-                      <li><a href="psbte_merit.html">PSBTE Merit Positions</a></li>
+                      <li><a href="academics_admissions/programmes.html">Programmes of Study</a></li>
+                      <li><a href="academics_admissions/admission_eligibility.html">Admission Eligibility</a></li>
+                      <li><a href="academics_admissions/antiragging.html">Anti Ragging</a></li>
+                      <li><a href="academics_admissions/fee_structure.html">Fee Structure</a></li>
+                      <li><a href="academics_admissions/academic_calendar.html">Academic Calendar</a></li>
+                      <li><a href="academics_admissions/general_rules.html">General Rules and Guidelines</a></li>
+                      <li><a href="academics_admissions/psbte_results.html">PSBTE Results</a></li>
+                      <li><a href="academics_admissions/psbte_merit.html">PSBTE Merit Positions</a></li>
                     </ul>
                   </li>
                   <li class="has-sub">
                     <a href="javascript:void(0)">Departments</a>
                     <ul style="width:320px" class="sub-menu">
-                      <li><a href="aa.html">Architectural Assistantship</a></li>
-                      <li><a href="ce.html">Civil Engineering</a></li>
-                      <li><a href="cse.html">Computer Science &amp; Engineering</a></li>
-                      <li><a href="ee.html">Electrical Engineering</a></li>
-                      <li><a href="ece.html">Electronics & Communications Engg</a></li>
-                      <li><a href="it.html">Information Technology</a></li>
-                      <li><a href="me.html">Mechanical Engineering</a></li>
-                      <li><a href="pie.html">Production and Industrial Engineering</a></li>
-                      <li><a href="pharmacy.html">Pharmacy</a></li>
-                      <li><a href="apsc.html">Applied Sciences</a></li>
-                      <li><a href="workshop.html">Workshop</a></li>
+                      <li><a href="departments/aa/home.html">Architectural Assistantship</a></li>
+                      <li><a href="departments/ce/home.html">Civil Engineering</a></li>
+                      <li><a href="departments/cse/home.html">Computer Science &amp; Engineering</a></li>
+                      <li><a href="departments/ee/home.html">Electrical Engineering</a></li>
+                      <li><a href="departments/ece/home.html">Electronics & Communications Engg</a></li>
+                      <li><a href="departments/it/home.html">Information Technology</a></li>
+                      <li><a href="departments/me/home.html">Mechanical Engineering</a></li>
+                      <li><a href="departments/pie/home.html">Production and Industrial Engineering</a></li>
+                      <li><a href="departments/pharmacy/home.html">Pharmacy</a></li>
+                      <li><a href="departments/applied/home.html">Applied Sciences</a></li>
+                      <li><a href="departments/workshop/home.html">Workshop</a></li>
                     </ul>
                   </li>
                   <li class="has-sub"> 
                     <a href="javascript:void(0)">Facilities</a>
                     <ul class="sub-menu">
-                      <li><a href="src.html">SRC Clubs</a></li>
-                      <li><a href="library.html">Library</a></li>
-                      <li><a href="hostels.html">Hostel</a></li>
-                      <li><a href="sports.html">Sports &amp; NSS</a></li>
-                      <li><a href="canteen.html">Canteen</a></li>
-                      <li><a href="workshop.html">Workshops</a></li>
-                      <li><a href="alumni.html">Alumni</a></li>
+                      <li><a href="facilities/src_clubs/home.html">SRC Clubs</a></li>
+                      <li><a href="facilities/library.html">Library</a></li>
+                      <li><a href="facilities/hostel.html">Hostel</a></li>
+                      <li><a href="facilities/sports_nss/home.html">Sports &amp; NSS</a></li>
+                      <li><a href="facilities/canteen.html">Canteen</a></li>
+                      <li><a href="departments/workshop/home.html">Workshops</a></li>
+                      <li><a href="facilities/alumni/home.html">Alumni</a></li>
 
                       </ul>
                       </li>
@@ -148,11 +162,18 @@ https://templatemo.com/tm-569-edu-meeting
                   <li class="has-sub">
                     <a href="javascript:void(0)">Affiliations</a>
                     <ul class="sub-menu">
-                      <li><a href="aicte_eoa.html">AICTE</a></li>
-                      <li><a href="pci.html">PCI</a></li>
-                      <li><a href="coa.html">COA</a></li>
+                      <li><a href="affiliations/aicte/home.html">AICTE</a></li>
+                      <li><a href="affiliations/pci/home.html">PCI</a></li>
+                      <li><a href="affiliations/coa/home.html">COA</a></li>
                       </ul>
                       </li>
+                      <li class="has-sub">
+                        <a href="javascript:void(0)">Important Links</a>
+                        <ul  style="width:350px" class="sub-menu">
+                          <li><a href="https://scholarships.gov.in/" target="_blank">National Scholarship Portal</a></li>
+                          <li><a href="http://www.scholarships.punjab.gov.in/Default.aspx" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
+                          </ul>
+                          </li>
                           </ul>
                           <a class="menu-trigger">
                             <span>Menu</span>
@@ -401,7 +422,7 @@ https://templatemo.com/tm-569-edu-meeting
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <div class="section-heading">
+          <div class="section-heading"  id="scholarships_offered">
             <h2 align="center">Admissions &amp; Scholarships</h2>
           </div>
         </div>
@@ -442,51 +463,32 @@ https://templatemo.com/tm-569-edu-meeting
               <label class="box-title" for="cb1">Chief Minister Scholarship Scheme</label>
               <label class="box-close" for="acc-close"></label>
               <div class="box-content">
-                In order to uplift and encourage the students with good academic record belonging to General Category, Govt. of Punjab Launched CM Scholarship Scheme in the year 2017 in Government Colleges Offering Diploma Courses in various streams.
+                In order to uplift and encourage the students with good academic record belonging to General Category, Govt. of Punjab Launched CM Scholarship Scheme in the year 2017 in Government Colleges Offering Diploma Courses in various streams including Technical and Pharmacy Courses (<a href="assets/files/cm_scholarship.pdf" target="_blank">Notification</a>).
 
-                Several Students till date have been benefited from this scheme. <br/><br/>
-                <table class="table table-striped">
-                  <tr>
-                    <th>
-                      Sr. No.
-                    </th>
-                    <th>
-                      %age in 10th/I.T.I./10+2(Science/Voc.)
-                    </th>
-                    <th>
-                      Benefit in Tuition Fee
-                    </th>
-                  </tr>
-                  <tr>
-                    <td>1.</td>
-                    <td>60% & Above but less than to 70%</td>
-                    <td>70% Tuition Fee Waive Off</td>
-                  </tr>
-                  <tr>
-                    <td>2.</td>
-                    <td>70% & Above but less than to 80%</td>
-                    <td>80% Tuition Fee Waive Off</td>
-                  </tr>
-                  <tr>
-                    <td>3.</td>
-                    <td>80% & Above but less than to 90%</td>
-                    <td>90% Tuition Fee Waive Off</td>
-                  </tr>
-                  <tr>
-                    <td>4.</td>
-                    <td>90% & Above</td>
-                    <td>100% Tuition Fee Waive Off</td>
-                  </tr>
-                </table>
+                Several Students till date have been benefited from this scheme. <br/>
+                <div class="main-button-red">
+                  <a href="scholarships/cm_scholarship.html#cm">Read More....</a>
+                </div>
+                <br/>
+                
 
 
               </div>
             </section>
             <input type="radio" name="accordion" id="cb2" />
             <section class="box">
-              <label class="box-title" for="cb2">Read me too</label>
+              <label class="box-title" for="cb2">Post Matric Scholarship Scheme for SC Students</label>
               <label class="box-close" for="acc-close"></label>
-              <div class="box-content">Add the class 'arrows' to nav.accordion to add dropdown arrows.</div>
+              <div class="box-content">The Objective of this scheme is  to appreciably increase the Gross Enrollment Ratio of SC Students in higher education with a focus on those from the poorest households, by providing financial assistance at post-matriculation or post-secondary stage to enable them to complete their education.
+
+                <div class="main-button-red">
+                  <a href="">Read More....</a>
+                </div>
+                <h6 style="display: block;margin-top:20px;color:black"><i class="fa fa-arrow-circle-o-right">&nbsp;</i>Eligibility Condition(s)</h6><br/>
+                <i class="fa fa-angle-right" >&nbsp;</i> The Scholarship is open to National of India only.<br/>
+                <i class="fa fa-angle-right" >&nbsp;</i>Only those candidates who belong to Scheduled Caste so specified in relation to the State/Union Territory to which the applicant actually belongs/ domiciled as determined by the State/ UT and who have passed the Matriculation or Higher Secondary or any higher examination of a recognized University or Board of Secondary Education will be eligible.
+
+              </div>
             </section>
             <input type="radio" name="accordion" id="cb3" />
             <section class="box" id="last_box">
@@ -776,9 +778,7 @@ https://templatemo.com/tm-569-edu-meeting
             </div>
           </div>
         </div>
-        <div class="col-lg-3">
-          <div class="right-info">
-            <ul>
+        <div class="col-lg-3">Meetings List
               <li>
                 <h6>Phone Number</h6>
                 <span>010-020-0340</span>
