--- a/meeting-details.html
+++ b/meeting-details.html
@@ -34,7 +34,7 @@ https://templatemo.com/tm-569-edu-meeting
    
 
   <!-- Sub Header -->
-  <!-- <div class="sub-header">
+  <div class="sub-header">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-sm-8">
@@ -54,46 +54,100 @@ https://templatemo.com/tm-569-edu-meeting
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky">
-      <div class="container">
-          <div class="row">
-              <div class="col-12">
-                  <nav class="main-nav">
-                      <!-- ***** Logo Start ***** -->
-                      <a href="index.html" class="logo">
-                          Edu Meeting
-                      </a>
-                      <!-- ***** Logo End ***** -->
-                      <!-- ***** Menu Start ***** -->
-                      <ul class="nav">
-                          <li><a href="index.html">Home</a></li>
-                          <li><a href="meetings.html" class="active">Meetings</a></li>
-                          <li><a href="index.html">Apply Now</a></li>
-                          <li class="has-sub">
-                              <a href="javascript:void(0)">Pages</a>
-                              <ul class="sub-menu">
-                                  <li><a href="meetings.html">Upcoming Meetings</a></li>
-                                  <li><a href="meeting-details.html">Meeting Details</a></li>
-                              </ul>
-                          </li>
-                          <li><a href="index.html">Courses</a></li> 
-                          <li><a href="index.html">Contact Us</a></li> 
-                      </ul>        
-                      <a class='menu-trigger'>
+    <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <nav class="main-nav">
+              <a href="index.html">
+                <img src="assets/images/logo.jpeg" class="logo" alt="">
+              </a>
+              <ul class="nav">
+                <li><a href="index.html" >Home</a></li>
+                <li class="has-sub">
+                  <a href="javascript:void(0)">About Us</a>
+                  <ul class="sub-menu">
+                    <li><a href="organization.html">Organization</a></li>
+                    <li><a href="principal_message.html">Principal&apos;s Message</a></li>
+                    <li><a href="vision_mission.html">Vision & Mission</a></li>
+                    <li><a href="history.html">History</a></li>
+                    <li><a href="campus.html">Campus</a></li>
+                  </ul>
+                </li>
+                <li class="has-sub">
+                  <a href="javascript:void(0)">Academics & Admission</a>
+                  <ul style="width:280px" class="sub-menu">
+                    <li><a href="programmes.html">Programmes of Study</a></li>
+                    <li><a href="admission_eligibility.html">Admission Eligibility</a></li>
+                    <li><a href="anti_ragging.html">Anti Ragging</a></li>
+                    <li><a href="fee_structure.html">Fee Structure</a></li>
+                    <li><a href="academic_calendar.html">Academic Calendar</a></li>
+                    <li><a href="general_rules.html">General Rules and Guidelines</a></li>
+                    <li><a href="psbte_results.html">PSBTE Results</a></li>
+                    <li><a href="psbte_merit.html">PSBTE Merit Positions</a></li>
+                  </ul>
+                </li>
+                <li class="has-sub">
+                  <a href="javascript:void(0)">Departments</a>
+                  <ul style="width:320px" class="sub-menu">
+                    <li><a href="aa.html">Architectural Assistantship</a></li>
+                    <li><a href="ce.html">Civil Engineering</a></li>
+                    <li><a href="cse.html">Computer Science &amp; Engineering</a></li>
+                    <li><a href="ee.html">Electrical Engineering</a></li>
+                    <li><a href="ece.html">Electronics & Communications Engg</a></li>
+                    <li><a href="it.html">Information Technology</a></li>
+                    <li><a href="me.html">Mechanical Engineering</a></li>
+                    <li><a href="pie.html">Production and Industrial Engineering</a></li>
+                    <li><a href="pharmacy.html">Pharmacy</a></li>
+                    <li><a href="apsc.html">Applied Sciences</a></li>
+                    <li><a href="workshop.html">Workshop</a></li>
+                  </ul>
+                </li>
+                <li class="has-sub"> 
+                  <a href="javascript:void(0)">Facilities</a>
+                  <ul class="sub-menu">
+                    <li><a href="src.html">SRC Clubs</a></li>
+                    <li><a href="library.html">Library</a></li>
+                    <li><a href="hostels.html">Hostel</a></li>
+                    <li><a href="sports.html">Sports &amp; NSS</a></li>
+                    <li><a href="canteen.html">Canteen</a></li>
+                    <li><a href="workshop.html">Workshops</a></li>
+                    <li><a href="alumni.html">Alumni</a></li>
+
+                    </ul>
+                    </li>
+                
+                <li class="has-sub">
+                  <a href="javascript:void(0)">Affiliations</a>
+                  <ul class="sub-menu">
+                    <li><a href="aicte_eoa.html">AICTE</a></li>
+                    <li><a href="pci.html">PCI</a></li>
+                    <li><a href="coa.html">COA</a></li>
+                    </ul>
+                    </li>
+                    <li class="has-sub">
+                      <a href="javascript:void(0)">Important Links</a>
+                      <ul  style="width:350px" class="sub-menu">
+                        <li><a href="https://scholarships.gov.in/" target="_blank">National Scholarship Portal</a></li>
+                        <li><a href="http://www.scholarships.punjab.gov.in/Default.aspx" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
+                        <li><a href="coa.html">COA</a></li>
+                        </ul>
+                        </li>
+                        </ul>
+                        <a class="menu-trigger">
                           <span>Menu</span>
-                      </a>
-                      <!-- ***** Menu End ***** -->
-                  </nav>
-              </div>
-          </div>
-      </div>
-  </header>
+                        </a>
+                      </nav>
+        </div>
+        </div>
+    </div>
+</header>
   <!-- ***** Header Area End ***** -->
 
-  <!-- <section class="heading-page header-text" id="top">
+  <section class="heading-page header-text" id="top">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -102,7 +156,7 @@ https://templatemo.com/tm-569-edu-meeting
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
 
   <section class="meetings-page" id="meetings">
     <div class="container">
@@ -112,26 +166,23 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="col-lg-12">
               <div class="meeting-single-item">
                 <div class="thumb">
-                  <!-- <div class="price">
+                  <div class="price">
                     <span>$14.00</span>
-                  </div> -->
-                  <!-- <div class="date">
+                  </div>
+                  <div class="date">
                     <h6>Nov <span>12</span></h6>
-                  </div> -->
-                  <a href="meeting-details.html"><img src="assets/images/gpc.jpg" alt=""></a>
+                  </div>
+                  <a href="meeting-details.html"><img src="assets/images/single-meeting.jpg" alt=""></a>
                 </div>
                 <div class="down-content">
-                  <a href="meeting-details.html"><h4>Our Principal Message</h4></a>
-                  <p>It is a pride for us that Govt.Polytechnic College,Bathinda has done well in various fields of academics, sports and extra-curricular activities. I am sure that our College will help both the industry and our students to get gainful employment for requisite information.</p>
-                  <!-- <p class="description">
+                  <a href="meeting-details.html"><h4>Online Teaching and Learning Tools</h4></a>
+                  <p>Recreio dos Bandeirantes, Rio de Janeiro - RJ, 22795-008, Brazil</p>
+                  <p class="description">
                     This is an edu meeting HTML CSS template provided by <a href="https://templatemo.com/" target="_blank" rel="nofollow">TemplateMo website</a>. This is a Bootstrap v5.1.3 layout. If you need more free website templates like this one, please visit our website TemplateMo. Please tell your friends about our website. Thank you. If you want to get the latest collection of HTML CSS templates for your websites, you may visit <a rel="nofollow" href="https://www.toocss.com/" target="_blank">Too CSS website</a>. If you need a working contact form script, please visit <a href="https://templatemo.com/contact" target="_parent">our contact page</a> for more info.
                     
                     <br><br>You are allowed to use this edu meeting CSS template for your school or university or business. You can feel free to modify or edit this layout. You are not allowed to redistribute the template ZIP file on any other template website. Please contact us for more information.
-                  </p> -->
-                  <!-- <p class="description">
-                    It is a pride for us that Govt.Polytechnic College,Bathinda has done well in various fields of academics, sports and extra-curricular activities. I am sure that our College will help both the industry and our students to get gainful employment for requisite information.
-                  </p> -->
-                  <!-- <div class="row">
+                  </p>
+                  <div class="row">
                     <div class="col-lg-4">
                       <div class="hours">
                         <h5>Hours</h5>
@@ -162,7 +213,7 @@ https://templatemo.com/tm-569-edu-meeting
                         </ul>
                       </div>
                     </div>
-                  </div> -->
+                  </div>
                 </div>
               </div>
             </div>
