--- a/scholarships/cm_scholarship.html
+++ b/scholarships/cm_scholarship.html
@@ -103,6 +103,7 @@
                   <a href="javascript:void(0)">Academics & Admission</a>
                   <ul style="width:280px" class="sub-menu">
                     <li><a href="academics_admissions/programmes.html">Programmes of Study</a></li>
+                    <li><a href="../index.html#scholarships_offered">Scholarships</a></li>
                     <li><a href="academics_admissions/admission_eligibility.html">Admission Eligibility</a></li>
                     <li><a href="academics_admissions/antiragging.html">Anti Ragging</a></li>
                     <li><a href="academics_admissions/fee_structure.html">Fee Structure</a></li>
