working on scholarship

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ https://templatemo.com/tm-569-edu-meeting
               <label class="box-title" for="cb1">Chief Minister Scholarship Scheme</label>
               <label class="box-close" for="acc-close"></label>
               <div class="box-content">
-                In order to uplift and encourage the students with good academic record belonging to General Category, Govt. of Punjab Launched CM Scholarship Scheme in the year 2017 in Government Colleges Offering Diploma Courses in various streams including Technical and Pharmacy Courses (<a href="assets/files/cm_scholarship.pdf" target="_blank">Notification</a>).
+                In order to uplift and encourage the students with good academic record belonging to General Category, Govt. of Punjab Launched CM Scholarship Scheme in the year 2017 in Government Colleges Offering Admissions to First Year and LEET Entry to Diploma Courses in various streams including Technical and Pharmacy Courses. (<a href="assets/files/cm_scholarship.pdf" target="_blank">Notification</a>).
 
                 Several Students till date have been benefited from this scheme. <br/>
                 <div class="main-button-red">
@@ -504,12 +504,13 @@ https://templatemo.com/tm-569-edu-meeting
             <!-- Free ship -->
             <input type="radio" name="accordion" id="cb11" />
             <section class="box">
-              <label class="box-title" for="cb11">PSBTE Free Ship Scheme</label>
+              <label class="box-title" for="cb11">PSBTE Scholarship Schemes</label>
               <label class="box-close" for="acc-close"></label>
-              <div class="box-content">The objective of the scheme is to appreciably increase the Gross Enrollment Ratio of SC Students (domiciled in any Indian State/ UT) in higher education in Indian institutes with a focus on those from the poorest households, by providing financial assistance at post-matriculation or post-secondary stage to enable them to complete their education.
+              <div class="box-content">
+                Punjab State Board of Technical Education (PSBTE) Chandigarh has launched several scholarship schemes for students to provide financial assistance in achieving their education goals in technical education.
 
                 <div class="main-button-red">
-                  <a href="scholarships/pms_panindia.html">Read More....</a>
+                  <a href="scholarships/psbte_scholarship.html">Read More....</a>
                 </div>
               </div>
             </section>
