--- a/scholarships/cm_scholarship.html
+++ b/scholarships/cm_scholarship.html
@@ -203,7 +203,7 @@
                   <a href="../assets/files/cm_scholarship.pdf" target="_blank">Notification- CM Scholarship</a> </p>
                   <p class="description">
                     In order to uplift and encourage the students with good academic record belonging to General Category, Govt. of Punjab Launched CM Scholarship Scheme in the year 2017 in Government Colleges Offering Diploma Courses in various streams including Technical and Pharmacy Courses.<br/><br/>
-                    <span style="color:#9c2c34;font-weight:bold;">Till Date 400+ Students have been benefited from this Scholarship.</span>
+                    <!-- <span style="color:#9c2c34;font-weight:bold;">Till Date 400+ Students have been benefited from this Scholarship.</span> -->
                     
                   </p>
                  
