--- a/scholarships/pms.html
+++ b/scholarships/pms.html
@@ -202,7 +202,7 @@
                   <a href="../assets/files/NewPMSC ScholarshipScheme.pdf" target="_blank">Notification- Dr. BR Ambedkar SC Scholarship Scheme</a> </p>
                   <p class="description">
                     The Objective of this scheme is to appreciably increase the Gross Enrollment Ratio of SC Students in higher education with a focus on those from the poorest households, by providing financial assistance at post-matriculation or post-secondary stage to enable them to complete their education. <br/><br/>
-                    <span style="color:#9c2c34;font-weight:bold;">Till Date 400+ Students have been benefited from this Scholarship.</span>
+                    <!-- <span style="color:#9c2c34;font-weight:bold;">Till Date 400+ Students have been benefited from this Scholarship.</span> -->
                     
                   </p>
                  
