--- a/index.html
+++ b/index.html
@@ -207,24 +207,24 @@ https://templatemo.com/tm-569-edu-meeting
                   
                 </p>
                 <div class="news-section">
-                  <div>
-                    <img src="assets/images/news_icon.gif" alt="" class="new-news">
+                    <div>
+                      <img src="assets/images/news.gif" alt="">
                     <h5>Latest News</h5>
-                    <img src="assets/images/news_icon.gif" alt="" class="new-news">
+                    <img src="assets/images/news.gif" alt="">
+                    </div>
                     <marquee style="margin-bottom: 10px;" behavior="scroll" direction="up" scrollamount="2">
                     <ol>
                       <li>
-                        <img src="assets/images/news_icon.gif" alt="" class="new-news"><a href="assets/files/rent_contract_22_23.pdf" target="_blank">
+                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/rent_contract_22_23.pdf" target="_blank">
                           Rent Contract of Canteen and Tuck Shop on Contractual Basis for 2022-23
                         </a>
                       </li>
                       <li>
-                        <img src="assets/images/news_icon.gif" alt="" class="new-news"><a  target="_blank" href="https://forms.gle/JUAnQpeA9uQRYLNH8">Click For Provisional Registration for Admissions 2022-23</a>
+                        <img src="assets/images/news.gif" alt=""><a  target="_blank" href="https://forms.gle/JUAnQpeA9uQRYLNH8">Click For Provisional Registration for Admissions 2022-23</a>
                       </li>
-                      <li><a href="#">Semester Exam starts from 15th June Now</a></li>
+                      <li><a href="#"><img src="assets/images/news.gif" alt="">Semester Exam starts from 15th June Now</a></li>
                     </ol>
                   </marquee>
-                  </div>
                   
                 </div>
               </div>
