Working on Testimonial

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ https://templatemo.com/tm-569-edu-meeting
         <div class="col-lg-12">
           <div class="section-heading">
             <h2 style=" text-align: center;">
-              Our Courses<br/>
+              Testimonials<br/>
               <span style="color:#9c2c34;font-size: 18px;font-style: italic;text-shadow: 2px 2px 2px white;">Our Students Saying...</span>
               
             </h2>
@@ -577,7 +577,7 @@ https://templatemo.com/tm-569-edu-meeting
           <div class="owl-courses-item owl-carousel">
             <div class="testimonial-item">
               <img src="assets/images/testimonials/harkesh.jpg" alt="" srcset="">
-              <h3>Harkesh Kumar</h3>
+              <h2>Harkesh Kumar</h2>
               <p>My passion in Graphic Designing evolved
                 into career with constant guidance and 
                 motivation from faculty members of this institute
