--- a/index.html
+++ b/index.html
@@ -659,6 +659,20 @@ https://templatemo.com/tm-569-edu-meeting
                 Deeply from my heart, I am very thankful to team GPC Bathinda and my respected Principal and faculty members of the Architectural Assistantship Department who put plethora of efforts to polish the skills of learners like me. As a result of which today, I am running my own office and working as an Architect and with the knowledge acquired, I will definitely achieve heights. 
                 </p>
                 <span>
+                  <img src="assets/images/testimonials/left_floral.png" alt="" srcset=""> Architect
+                  <img src="assets/images/testimonials/right_floral.png" alt="" srcset="">
+                </span>
+                <span>Own Business
+                </span>
+              
+            </div>
+            <div class="testimonial-item">
+              <img src="assets/images/testimonials/danish_bansal.jpg" alt="" srcset="">
+              <h5>Danish Bansal</h5>
+              <p>
+                Deeply from my heart, I am very thankful to team GPC Bathinda and my respected Principal and faculty members of the Architectural Assistantship Department who put plethora of efforts to polish the skills of learners like me. As a result of which today, I am running my own office and working as an Architect and with the knowledge acquired, I will definitely achieve heights. 
+                </p>
+                <span>
                   <img src="assets/images/testimonials/left_floral.png" alt="" srcset=""> Video and Photo Editor
                   <img src="assets/images/testimonials/right_floral.png" alt="" srcset="">
                 </span>
