--- a/index.html
+++ b/index.html
@@ -670,13 +670,13 @@ https://templatemo.com/tm-569-edu-meeting
               <img src="assets/images/testimonials/danish_bansal.jpg" alt="" srcset="">
               <h5>Danish Bansal</h5>
               <p>
-                Deeply from my heart, I am very thankful to team GPC Bathinda and my respected Principal and faculty members of the Architectural Assistantship Department who put plethora of efforts to polish the skills of learners like me. As a result of which today, I am running my own office and working as an Architect and with the knowledge acquired, I will definitely achieve heights. 
+                During all the three years, I have spent in this college I had been receiving proper guidance from my teachers which basically helped me in shaping my life. I am currently working at Bonafide Technologies with a role of Application Developer which is a result of the dedication and supportive nature of faculty members who helped me to understand all the topics.
                 </p>
                 <span>
-                  <img src="assets/images/testimonials/left_floral.png" alt="" srcset=""> Video and Photo Editor
+                  <img src="assets/images/testimonials/left_floral.png" alt="" srcset=""> Developer
                   <img src="assets/images/testimonials/right_floral.png" alt="" srcset="">
                 </span>
-                <span>Freelancer
+                <span>Bonafide Technologies
                 </span>
               
             </div>
