--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@ https://templatemo.com/tm-569-edu-meeting
                   <img src="assets/images/testimonials/left_floral.png" alt="" srcset=""> Junior Engineer
                   <img src="assets/images/testimonials/right_floral.png" alt="" srcset="">
                 </span>
-                <span>P.S.P.C.L, Punjab
+                <span>PUDA
                 </span>
               
             </div>
