Added About Us Page

--- a/index.html
+++ b/index.html
@@ -583,6 +583,7 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="testimonial-item">
               <img src="assets/images/testimonials/harkesh.jpg" alt="" srcset="">
               <h5>Harkesh Kumar</h5>
+              <h6>Batch (2016-2019)</h6>
               <p>My passion in Graphic Designing evolved
                 into career with constant guidance and 
                 motivation from faculty members of this institute
@@ -618,6 +619,7 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="testimonial-item">
               <img src="assets/images/testimonials/sukhwinder.jpg" alt="" srcset="">
               <h5>Sukhwinder Singh </h5>
+              <h6>Batch (2018-2021)</h6>
               <p>
                  My experience at GPC was full of learning and grooming. I am grateful to the extremely qualified faculty members to provide us hands on experience on different set of projects that helped me to land as a Developer Job in such reputed organization. I would highly recommend you to join IT in this institute if you want to build a career in a growing field.
 
@@ -633,6 +635,7 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="testimonial-item">
               <img src="assets/images/testimonials/narmeen.jpeg" alt="" srcset="">
               <h5>Narmeen Singh Sokhal</h5>
+              <h6>Batch (2019-2022)</h6>
               <p>
                 I always wanted to start something of my own in the field of graphic designing and video editing. Today I am working as freelancer photo and video editor and it's all because the sheer motivation and guidance of Principal GPC Bathinda, and all the faculty members of IT who constantly pushed and guided  me to land into the work area, I always dreamt of.
                 </p>
@@ -647,6 +650,7 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="testimonial-item">
               <img src="assets/images/testimonials/atinderpalsingh.jpeg" alt="" srcset="">
               <h5>Atinderpal Singh</h5>
+              <h6>Batch (2008-2011)</h6>
               <p>
                 Deeply from my heart, I am very thankful to team GPC Bathinda and my respected Principal and faculty members of the Architectural Assistantship Department who put plethora of efforts to polish the skills of learners like me. As a result of which today, I am running my own office and working as an Architect and with the knowledge acquired, I will definitely achieve heights. 
                 </p>
@@ -661,6 +665,7 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="testimonial-item">
               <img src="assets/images/testimonials/danish_bansal.jpg" alt="" srcset="">
               <h5>Danish Bansal</h5>
+              <h6>Batch (2018-2021)</h6>
               <p>
                 During all the three years, I have spent in this college I had been receiving proper guidance from my teachers which basically helped me in shaping my life. I am currently working at Bonafide Technologies with a role of Application Developer which is a result of the dedication and supportive nature of faculty members who helped me to understand all the topics.
                 </p>
@@ -675,6 +680,7 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="testimonial-item">
               <img src="assets/images/testimonials/nitish.jpg" alt="" srcset="">
               <h5>Nitish Kumar</h5>
+              <h6>Batch (2018-2021)</h6>
               <p>
                 The teaching methodology, guidance of expert faculty, doubt clearing sessions helped me to develop the skills required to crack the competitive exam. Even pandemic could not able to hinder the studies due to the dedicated teaching schedule. As a result of this all dedication I was able to land into my dream job of Junior Engineering in PSPCL, Punjab in the very first attempt.
                 </p>
@@ -689,6 +695,7 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="testimonial-item">
               <img src="assets/images/testimonials/gurdita.png" alt="" srcset="">
               <h5>Gurdita Singh</h5>
+              <h6>Batch (2013-2016)</h6>
               <p>
                 I am currently working as Junior Engineering, PUDA since 2017. Teaching skills and guidance of faculty members of this institute helped me lot to crack this competitive exam even without any additional coaching. I am very thankful to all the staff members of GPC Bathinda and owe my success to the entire team. It is indeed the best Polytechnic College in the whole Malwa Region.
                 </p>
