--- a/aboutus/principal_message.html
+++ b/aboutus/principal_message.html
@@ -205,14 +205,16 @@
                  <div class="org-body">
                   <p class="content-org">
                     <br/>
-                    Imparting education is not just about teaching what is written in the books but is about the wholistic development of students that inculcates the moral, social values along with skills in curricular and extra-curricular fields. At Government Polytechnic Bathinda, we as team always ensure to focus our efforts on developing the overall personality of the students which help the students to shine in every field they wish to go for.
+                    Imparting education is not just about teaching what is written in the books but is about the wholistic development of students that inculcates the moral, social values along with skills in curricular and extra-curricular fields. At Government Polytechnic Bathinda, we as team always ensure to focus our efforts on developing the overall personality of the students which help the students to shine in every field they wish to go for. Our students are the proud achievers of not only the academic positions but the topmost ones in sports also at the Inter-College Level. 
                     <br/><br/>
 
                     Government Polytechnic College, Bathinda was established in the year 1985 to impart practical and quality education along with sufficient job opportunities in the field of Engineering and Technology. The Institute has been awarded with the Outstanding Institution Award (2019-20) and (2013-14) and the Best Polytechnic Award (2008-09) by the Government of Punjab. 
                     <br/><br/>
                     The perseverance and dedication of the entire staff is so high that it is effervescent to evolve problem- solving strategies for the betterment of the students.
-                    <br/><br/>
-                    Holistic development of the personality of each and every student is stressed upon by encouraging students to perform best of their abilities in academic and curricular activities. Our students are the proud achievers of not only the academic positions but the topmost ones in sports also at the Inter-College Level. 
+                    Our committed, caring, dedicated and supportive faculty and co-operative parents blend harmoniously to create a child centered college.  It is natural to find in this ambience, intensive use of a variety of thinking activities, strategies and group dynamics so that the classrooms become alive. Teamwork is hallmark of GPC Bathinda. I am very sure through collaborative effort, we can achieve more to benefit our students, who are the future leaders of tomorrow.
+                    <br/><br/> In the last the only thing can I say and totally agree to the following quote by B.B. King.
+
+                    <span id="motivation">"Education is the Most Powerful weapon you can use to change the world."</span>
 
                   </p>
                   <div class="principal-mesg">
