--- a/sub_header/citizen_charter.html
+++ b/sub_header/citizen_charter.html
@@ -92,53 +92,53 @@
                 <li class="has-sub">
                   <a href="javascript:void(0)">About Us</a>
                   <ul class="sub-menu">
-                    <li><a href="aboutus/organization.html">Organization</a></li>
-                    <li><a href="aboutus/principal_message.html">Principal&apos;s Message</a></li>
-                    <li><a href="aboutus/vision_mission.html">Vision & Mission</a></li>
-                    <li><a href="aboutus/history.html">History</a></li>
-                    <li><a href="aboutus/campus.html">Campus</a></li>
+                    <li><a href="../aboutus/organization.html">Organization</a></li>
+                    <li><a href="../aboutus/principal_message.html">Principal&apos;s Message</a></li>
+                    <li><a href="../aboutus/vision_mission.html">Vision & Mission</a></li>
+                    <li><a href="../aboutus/history.html">History</a></li>
+                    <li><a href="../aboutus/campus.html">Campus</a></li>
                   </ul>
                 </li>
                 <li class="has-sub">
                   <a href="javascript:void(0)">Academics & Admission</a>
                   <ul style="width:280px" class="sub-menu">
-                    <li><a href="academics_admissions/programmes.html">Programmes of Study</a></li>
+                    <li><a href="../academics_admissions/programmes.html">Programmes of Study</a></li>
                     <li><a href="../index.html#scholarships_offered">Scholarships</a></li>
-                    <li><a href="academics_admissions/admission_eligibility.html">Admission Eligibility</a></li>
-                    <li><a href="academics_admissions/antiragging.html">Anti Ragging</a></li>
-                    <li><a href="academics_admissions/fee_structure.html">Fee Structure</a></li>
-                    <li><a href="academics_admissions/academic_calendar.html">Academic Calendar</a></li>
-                    <li><a href="academics_admissions/general_rules.html">General Rules and Guidelines</a></li>
-                    <li><a href="academics_admissions/psbte_results.html">PSBTE Results</a></li>
-                    <li><a href="academics_admissions/psbte_merit.html">PSBTE Merit Positions</a></li>
+                    <li><a href="../academics_admissions/admission_eligibility.html">Admission Eligibility</a></li>
+                    <li><a href="../academics_admissions/antiragging.html">Anti Ragging</a></li>
+                    <li><a href="../academics_admissions/fee_structure.html">Fee Structure</a></li>
+                    <li><a href="../academics_admissions/academic_calendar.html">Academic Calendar</a></li>
+                    <li><a href="../academics_admissions/general_rules.html">General Rules and Guidelines</a></li>
+                    <li><a href="../academics_admissions/psbte_results.html">PSBTE Results</a></li>
+                    <li><a href="../academics_admissions/psbte_merit.html">PSBTE Merit Positions</a></li>
                   </ul>
                 </li>
                 <li class="has-sub">
                   <a href="javascript:void(0)">Departments</a>
                   <ul style="width:320px" class="sub-menu">
-                    <li><a href="departments/aa/home.html">Architectural Assistantship</a></li>
-                    <li><a href="departments/ce/home.html">Civil Engineering</a></li>
-                    <li><a href="departments/cse/home.html">Computer Science &amp; Engineering</a></li>
-                    <li><a href="departments/ee/home.html">Electrical Engineering</a></li>
-                    <li><a href="departments/ece/home.html">Electronics & Communications Engg</a></li>
-                    <li><a href="departments/it/home.html">Information Technology</a></li>
-                    <li><a href="departments/me/home.html">Mechanical Engineering</a></li>
-                    <li><a href="departments/pie/home.html">Production and Industrial Engineering</a></li>
-                    <li><a href="departments/pharmacy/home.html">Pharmacy</a></li>
-                    <li><a href="departments/applied/home.html">Applied Sciences</a></li>
-                    <li><a href="departments/workshop/home.html">Workshop</a></li>
+                    <li><a href="../departments/aa/home.html">Architectural Assistantship</a></li>
+                    <li><a href="../departments/ce/home.html">Civil Engineering</a></li>
+                    <li><a href="../departments/cse/home.html">Computer Science &amp; Engineering</a></li>
+                    <li><a href="../departments/ee/home.html">Electrical Engineering</a></li>
+                    <li><a href="../departments/ece/home.html">Electronics & Communications Engg</a></li>
+                    <li><a href="../departments/it/home.html">Information Technology</a></li>
+                    <li><a href="../departments/me/home.html">Mechanical Engineering</a></li>
+                    <li><a href="../departments/pie/home.html">Production and Industrial Engineering</a></li>
+                    <li><a href="../departments/pharmacy/home.html">Pharmacy</a></li>
+                    <li><a href="../departments/applied/home.html">Applied Sciences</a></li>
+                    <li><a href="../departments/workshop/home.html">Workshop</a></li>
                   </ul>
                 </li>
                 <li class="has-sub"> 
                   <a href="javascript:void(0)">Facilities</a>
                   <ul class="sub-menu">
-                    <li><a href="facilities/src_clubs/home.html">SRC Clubs</a></li>
-                    <li><a href="facilities/library.html">Library</a></li>
-                    <li><a href="facilities/hostel.html">Hostel</a></li>
-                    <li><a href="facilities/sports_nss/home.html">Sports &amp; NSS</a></li>
-                    <li><a href="facilities/canteen.html">Canteen</a></li>
-                    <li><a href="departments/workshop/home.html">Workshops</a></li>
-                    <li><a href="facilities/alumni/home.html">Alumni</a></li>
+                    <li><a href="../facilities/src_clubs/home.html">SRC Clubs</a></li>
+                    <li><a href="../facilities/library.html">Library</a></li>
+                    <li><a href="../facilities/hostel.html">Hostel</a></li>
+                    <li><a href="../facilities/sports_nss/home.html">Sports &amp; NSS</a></li>
+                    <li><a href="../facilities/canteen.html">Canteen</a></li>
+                    <li><a href="../departments/workshop/home.html">Workshops</a></li>
+                    <li><a href="../facilities/alumni/home.html">Alumni</a></li>
 
                     </ul>
                     </li>
@@ -146,9 +146,9 @@
                 <li class="has-sub">
                   <a href="javascript:void(0)">Affiliations</a>
                   <ul class="sub-menu">
-                    <li><a href="affiliations/aicte/home.html">AICTE</a></li>
-                    <li><a href="affiliations/pci/home.html">PCI</a></li>
-                    <li><a href="affiliations/coa/home.html">COA</a></li>
+                    <li><a href="../affiliations/aicte/home.html">AICTE</a></li>
+                    <li><a href="../affiliations/pci/home.html">PCI</a></li>
+                    <li><a href="../affiliations/coa/home.html">COA</a></li>
                     </ul>
                     </li>
                     <li class="has-sub">
