--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@ https://templatemo.com/tm-569-edu-meeting
                         <ul  style="width:350px" class="sub-menu">
                           <li><a href="https://scholarships.gov.in/" target="_blank">National Scholarship Portal</a></li>
                           <li><a href="http://www.scholarships.punjab.gov.in/Default.aspx" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
-                          </ul>
+                          <li><a href="https://connect.punjab.gov.in/">Punjab Grievance Redressal Portal</a></li>
+                        </ul>
                           </li>
                           </ul>
                           <a class="menu-trigger">
@@ -365,7 +366,52 @@ https://templatemo.com/tm-569-edu-meeting
             </div>
           </div>
           <div class="col-lg-5">
-            
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="meeting-item">
+                  <div class="title-heading" style="font-weight: bold;">
+                    Help Desk
+                  </div>
+                  <div class="down-content" style="height:470px;">
+                    <table style="margin: 0px;">
+                      <tr>
+                        <td>
+                          <span style="font-size:40px;">☞</span>
+                        </td>
+                        <td>
+                          <a href="help_desk/grievance_redressal_committee.html" style="font-size:18px;">Grievance Redressal</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <span style="font-size:40px;">☞</span>
+                        </td>
+                        <td>
+                          <a href="help_desk/icc.html" style="font-size:18px;">Internal Complaint Committee</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <span style="font-size:40px;">☞</span>
+                        </td>
+                        <td>
+                          <a href="help_desk/scstcommittee.html" style="font-size:18px;">SC/ ST Committee</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <span style="font-size:40px;">☞</span>
+                        </td>
+                        <td>
+                          <a href="help_desk/student_counsellor.html" style="font-size:18px;">Student Counsellor</a>
+                        </td>
+                      </tr>
+                      
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
