--- a/help_desk/grievance_redressal_committee.html
+++ b/help_desk/grievance_redressal_committee.html
@@ -45,23 +45,23 @@
             <p>
               <span style="padding-left:5%;">
                 <i class="fa fa-briefcase">&nbsp;</i>
-                <a href="placements.html">Placements</a>
+                <a href="../sub_header/placements.html">Placements</a>
               </span>
               <span style="padding-left:2%;">
                 <i class="fa fa-briefcase">&nbsp;</i>
-                <a href="citizen_charter.html">Citizen Charter &amp; RTI</a>
+                <a href="../sub_header/citizen_charter.html">Citizen Charter &amp; RTI</a>
               </span>
               <span style="padding-left:2%;">
                 <i class="fa fa-download">&nbsp;</i>
-                <a href="disclosure.html">Disclosure</a>
+                <a href="../sub_header/disclosure.html">Disclosure</a>
               </span>
               <span style="padding-left:2%;">
                 <i class="fa fa-download">&nbsp;</i>
-                <a href="downloads.html">Downloads</a>
+                <a href="../sub_header/downloads.html">Downloads</a>
               </span>
               <span style="padding-left:2%;">
                 <i class="fa fa-graduation-cap">&nbsp;</i>
-                <a href="#scholarships_offered">Scholarships</a>
+                <a href="../index.html#scholarships_offered">Scholarships</a>
               </span>
               </p>
           </div>
