--- a/index.html
+++ b/index.html
@@ -567,10 +567,12 @@ https://templatemo.com/tm-569-edu-meeting
             <section class="box">
               <label class="box-title" for="cb4">Post Matric Scholarship Scheme for OBC Students</label>
               <label class="box-close" for="acc-close"></label>
-              <div class="box-content">The objective of the scheme is to appreciably increase the Gross Enrollment Ratio of SC Students (domiciled in any Indian State/ UT) in higher education in Indian institutes with a focus on those from the poorest households, by providing financial assistance at post-matriculation or post-secondary stage to enable them to complete their education.
+              <div class="box-content">The objective of the scheme is to motivate the students belonging to OBC category and to provide financial 
+                assistance to these students coming from background with low income and belonging to non-creamy layer. Students belonging to OBC 
+                can apply for scholarship on Dr. Ambedkar Scholarship Portal at <a href="https://scholarships.punjab.gov.in">https://scholarships.punjab.gov.in</a>
 
                 <div class="main-button-red">
-                  <a href="scholarships/pms_panindia.html">Read More....</a>
+                  <a href="https://scholarships.punjab.gov.in/Public/pdf/Policy_PMS_OBC.pdf" target="_blank">Read More....</a>
                 </div>
               </div>
             </section>
