update hod msg apsc

--- a/departments/applied/home.html
+++ b/departments/applied/home.html
@@ -211,7 +211,14 @@
                       <!-- Head's Message -->
                       <h4 class="block-dept">HoD's Message</h4>
                       <div class="hod-message">
-                        <p>I feel proud to be leading a team of intellectuals always striving to strengthen the diploma in architecture year by year. They are the faculty who are skillful and resourceful in various domains to take up challenges and deliver creative qualitative knowledge base.The responsibility as faculty is to adopt an approach that builds up confidence, make them creative, innovative, and strengthen the entrepreneurial skills of students. <br></p>
+                        <p>
+                      Applied Sciences is the crucial stepping stone to a plethora of opportunities in the field of architecture, civil engineering, computer sciences, electronics and communications, electrical engineering, information technology, mechanical engineering, production and industrial engineering. It is a discipline of science that applies scientific knowledge to develop more practical applications, including inventions and other technological advancements.
+
+Under the department, we have Applied Physics, Applied Chemistry, Applied Mathematics, English and Communication skills, which are taught by highly educated and competent faculty. The faculty imparts both practical and theoretical knowledge to the students, thereby equipping them in a holistic manner.
+
+Our vision at the Department of Applied Sciences is to turn the undergraduates of today into efficient, well-trained professionals of tomorrow.    
+                          
+                          <br></p>
                        <div>
                         <img src="../../assets/images/faculty/narinder.jpg" alt="" srcset="">
                         <figcaption>Narinder Kaur <br/> HOD Appl. Sci.</figcaption>
