--- a/index.html
+++ b/index.html
@@ -219,6 +219,11 @@ https://templatemo.com/tm-569-edu-meeting
                         </a>
                       </li>
                       <li>
+                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="https://connect.punjab.gov.in/" target="_blank">
+                          Unified Call Center (1100)
+                        </a>
+                      </li>
+                      <li>
                         <img src="assets/images/news.gif" alt=""><a  target="_blank" href="https://forms.gle/JUAnQpeA9uQRYLNH8">Click For Provisional Registration for Admissions 2022-23</a>
                       </li>
                       <li><a href="#"><img src="assets/images/news.gif" alt="">Semester Exam starts from 15th June Now</a></li>
