Diploma Programs Added

--- a/academics_admissions/programmes.html
+++ b/academics_admissions/programmes.html
@@ -194,7 +194,8 @@
                 <div class="down-content">
                    
                      <h4 class="block-dept">Diploma Level Programmes</h4>
-                     <table class="table table-striped dept-content-table">
+                     <div class="data-placement">
+                      <table class="table table-striped">
                         <thead>
                           <tr>
                             <th scope="col">#</th>
@@ -271,6 +272,7 @@
                           </tr>
                         </tbody>
                       </table>
+                     </div>
                       <span style="color: #6f0000; font-weight: bold;">Duration for Lateral Entry for all Diploma Level Engineering Courses shall be of 2 Years </span><br><br>
                       
 
