Diploma Programs modified

--- a/academics_admissions/fee_structure.html
+++ b/academics_admissions/fee_structure.html
@@ -230,6 +230,34 @@
                                 </td>
                             </tr>
                         </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    1<sup>st</sup>Semester
+                                </td>
+                                <td>
+                                    7700
+                                </td>
+                                <td>
+                                    8800
+                                </td>
+                                <td>
+                                    9900
+                                </td>
+                                <td>
+                                    11000
+                                </td>
+                                <td>
+                                    18700
+                                </td>
+                                <td>
+                                    1700
+                                </td>
+                                <td>
+                                    7700
+                                </td>
+                            </tr>
+                        </tbody>
 
                      </table>
 
