--- a/academics_admissions/programmes.html
+++ b/academics_admissions/programmes.html
@@ -194,8 +194,8 @@
                 <div class="down-content">
                    
                      <h4 class="block-dept">Diploma Level Programmes</h4>
-                     <div class="data-placement">
-                      <table class="table table-striped">
+                     <div class="data-overflow">
+                      <table class="table table-striped overflow-table">
                         <thead>
                           <tr>
                             <th scope="col">#</th>
